homeWork1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fedyiv-otus-hw1-service
spec:
  selector:
    app: fedyiv-otus-hw1-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
